Update and rename sprint_1.yaml to sprint1.yaml

--- a/.github/workflows/sprint1.yaml
+++ b/.github/workflows/sprint1.yaml
@@ -1,5 +1,5 @@
 #------------------------
- Add checks for sprint_1
+# Add checks for sprint_1
 #------------------------
 #
 # From Roadmap for sprint_1
