--- a/.github/workflows/sprint1.yaml
+++ b/.github/workflows/sprint1.yaml
@@ -45,8 +45,8 @@ jobs:
       run: set -eu && git clone https://github.com/Yandex-Practicum/tests-second-floor.git
     - name: Check dist and node_modules in .gitignore
       run: bash tests-second-floor/sprint_1/check_gitignore.sh
-    #- name: (Roadmap 9) Check npm run start existence
-    #  run: bash tests-second-floor/sprint_1/check_start.sh
+    - name: (Roadmap 9) Check npm run start existence
+      run: bash tests-second-floor/sprint_1/check_start.sh
     - name: (Roadmap 3) Check Parcel in start script
       run: bash tests-second-floor/sprint_1/check_parcel.sh
     #- name: (Roadmap 9) Check PORT 3000
